Changed About Me

--- a/example/_posts/2021-04-20-About Me.md
+++ b/example/_posts/2021-04-20-About Me.md
@@ -7,7 +7,7 @@ sitemap: false
 hide_last_modified: true
 ---
 
-### Hi There :hand:  
+# About.. Me 
 
 <div align="center">
 <pre>I am majoring in computer science in Korea.
@@ -17,7 +17,7 @@ Recently, the project I'm working on is Chetobot, which I'm building with Python
 
 
 
-### GitHub States
+## GitHub States
 
 <div align="center">
 <img src = "https://github-readme-stats.vercel.app/api?username=Cycrypto&show_icons=true&theme=vision-friendly-dark"/>
@@ -37,12 +37,12 @@ Recently, the project I'm working on is Chetobot, which I'm building with Python
 <a><img src= "https://github-readme-stats.vercel.app/api/top-langs/?username=Cycrypto&theme=blue-green"></a>
 </div>
 
-### BOJ (Solved.ac)
+## BOJ (Solved.ac)
 <div align="center">
 <a><img src= "http://mazassumnida.wtf/api/v2/generate_badge?boj=jh01love" href="https://solved.ac/jh01love"></a><br>
 </div>
 
-### Etc..
+## Etc..
 <div align="center">
 <a href="https://hits.seeyoufarm.com">
 <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https://cycrypto.github.io%2Fhit-counter&count_bg=%23D4DD12&title_bg=%2379C83D&icon=googleanalytics.svg&icon_color=%23EBE4E4&title=hits&edge_flat=false"/>
