--- a/pj/_posts/2021-04-30-Projects.md
+++ b/pj/_posts/2021-04-30-Projects.md
@@ -1,23 +1,26 @@
 ---
 # Featured tags need to have either the `list` or `grid` layout (PRO only).
-layout: list
+layout: page
 
 # The title of the tag's page.
-title: Example
+title: Projects
 
 # The name of the tag, used in a post's front matter (e.g. tags: [<slug>]).
-slug: example
+slug: pj
 
 # (Optional) Write a short (~150 characters) description of this featured tag.
 description: >
-  This is a featured category, which have their own page.
-  Check out `_featured_tags/example.md` to learn how to create your own.
+  This is the location to upload my Personal / Team Projects and its Memories
 
 # (Optional) You can disable grouping posts by date.
 # no_groups: true
 
 # Exclude this example category from the sitemap.
 # DON'T USE THIS SETTING IN YOUR CATEGORIES!
-# sitemap: false
+sitemap: true
 ---
+
+## Test Post
+
+`This is the Test Page`
 
