Changed Directory Path

--- a/cs/linear_algebra/_posts/2021-05-02-Vector5-1.md
+++ b/cs/linear_algebra/_posts/2021-05-02-Vector5-1.md
@@ -1,15 +1,15 @@
 ---
-layout: post
+layout: page
 title: Linear Algebra
 slug: linear_algebra
 description: >
-  Linear Algebra Upload Test
+  벡터의 기본 개념에 대해 공부한다.
 sitemap: false
 hide_last_modified: true
 ---
 
 
-# 백터
+# 백터1
 
 
 
