fix syntax error

--- a/cs/linear_algebra/_posts/2021-05-02-Vector6-1.md
+++ b/cs/linear_algebra/_posts/2021-05-02-Vector6-1.md
@@ -14,7 +14,7 @@ hide_last_modified: true
 
 ## 벡터 공간
 
-* **정의** :  체(*field*) 웨어서 집합 $$V$$가 벡터 공간
+* **정의** :  체(*field*) 위에서 집합 $$V$$가 벡터 공간<br>
   `실수 위에서의 벡터 공간`
   <br>
 
@@ -51,7 +51,7 @@ $$\therefore \mathbb{R}^n = V$$(벡터 공간)
 
 <br><br>
 
-1. $$V$$가 벡터 공간일 때는 이미 <mark>연산도 고려 </ mark>한 상황에서 말해야 한다.
+1. $$V$$가 벡터 공간일 때는 이미 <mark>연산도 고려 </mark>한 상황에서 말해야 한다.
 
 2. <mark>벡터 공간의 원소를, '벡터' </mark>라고 부름
 
