Updated Logic Circuit

--- a/cs/linear_algebra/_posts/2021-05-02-Vector5-1.md
+++ b/cs/linear_algebra/_posts/2021-05-02-Vector5-1.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Linear Algebra
-slug: linear_algebra
+slug: /cs/linear_algebra/
 description: >
   벡터의 기본 개념에 대해 공부한다.
 sitemap: false
