Updated Linear Algebra

--- a/cs/linear_algebra/_posts/2021-05-02-Vector6-1.md
+++ b/cs/linear_algebra/_posts/2021-05-02-Vector6-1.md
@@ -2,7 +2,7 @@
 layout: page
 title: Linear Algebra
 description: >
-  벡터의 연산에 대해 공부한다.
+  벡터 공간에 대해 공부한다
 sitemap: false
 hide_last_modified: true
 ---
@@ -59,9 +59,22 @@ $$\therefore \mathbb{R}^n = V$$(벡터 공간)
 
 
 
+## 영 벡터 공간
+
+* 하나의 원소로만 이루어진 공간벡터를 **영벡터공간**이라고 함.
+  이 하나의 원소를 $$0$$으로 나타내는데 $$0 + 0 = 0,\, \alpha 0 = 0 (\alpha \in \mathbb{R})$$
+
+  > 1. $$0u = 0$$.
+  > 2. $$\alpha 0 = 0$$.
+  > 3. $$(-1) u = -u$$.
+  > 4. $$\alpha u = 0$$ 이면 $$\alpha = 0$$ 또는 $$u=0$$
 
 
 
+## 부분 공간
 
+**정의**: 벡터 공간 $$V$$의 부분집합 $$W$$가 $$V$$에서 정의된 다음의 두 연산을 만족할 때, $$W$$를 $$V$$의 부분공간 이라고 한다
 
+1. $$u \in W, \, v \in W \Rightarrow u+v \in W$$.
+2. $$u \in W, \, \alpha \,\text{is scala} \Rightarrow \alpha u \in W$$.
 
