--- a/cs/linear_algebra/_posts/2021-05-02-Vector6-2.md
+++ b/cs/linear_algebra/_posts/2021-05-02-Vector6-2.md
@@ -34,3 +34,73 @@ $$v_1 = - \frac{a_2 v_2}{a_1} - \frac{a_3 v_3}{a_1} + \cdots + \frac{a_n v_n}{a_
 
 ## 생성 / 기저 / 차원
 
+#### 생성
+
+$$v_1, \cdots , v_n \in V$$가 $$V$$를 생성한다 $$\Leftrightarrow \forall v \in V$$ 에 대하여   
+
+$$a_1v_1 + a_2v_2 + \cdots + a_nv_n = v$$ 가 되는 스칼라 $$a_1, a_2 , \cdots , a_n$$이 존재할 경우를 뜻함.
+
+
+
+##### 예시
+
+> * 벡터 $$v_1 = \begin{pmatrix} 2 \\ 4\end{pmatrix}, \, v_2 = \begin{pmatrix}-1\\2\end{pmatrix}$$가 벡터 공간 $$\mathbb{R^2}$$를 생성하는가?
+>
+> $$2a_1 - a_2 = a \\ 4a_1 + 2a_2 = b$$를 풀면, $$a_1 = \frac{2a_b}{8}, a_2 = \frac{-2a+b}{4}$$인 스칼라 $$a_1, a_2가 존재함.$$
+>
+> 따라서 두 벡터는 $$\mathbb{R^2}를 생성함.$$
+
+
+
+#### 기저
+
+벡터공간 $$V$$에 있는벡터 $$v_1, v_2, \cdots , v_n$$이 아래 두 조건을 만족할 때 $$V$$에 대한 기저 라고 함.
+
+> 1. $$v_1, v_2, \cdots , v_n$$이 **선형독립**이다.
+>    * 선형 결합식을 $$0$$으로 놓고 푼다.
+> 2. $$v_1, v_2, \cdots , v_n$$이 $$V$$를 생성한다.
+
+
+
+##### 예시
+
+> * $$v_1 = \begin{pmatrix}1\\0\end{pmatrix}, v_2 = \begin{pmatrix}0 \\ 1\end{pmatrix}$$이 기저가 되는지 확인한다.
+>
+> **선형 독립 확인**
+>
+> $$a_1\begin{pmatrix}1 \\ 0\end{pmatrix} + a_2\begin{pmatrix}0 \\ 1\end{pmatrix}= \begin{pmatrix}0 \\ 0\end{pmatrix}$$, $$a_1,\, a_2 \in \mathbb{R}$$을 풀면
+>
+> $$\begin{pmatrix}a_1 \\ a_2\end{pmatrix} = \begin{pmatrix}0\\0\end{pmatrix}$$이므로, $$a_1 = a_2 = 0$$이다. 따라서 $$\{v_1, v_2\}$$는 선형독립이다.
+>
+> 
+>
+> **생성 확인**
+>
+> 두 벡터가 $$\mathbb{R^2}$$를 생성함을 보인다.
+>
+> $$v = \begin{pmatrix}a \\ b\end{pmatrix}$$를 $$\mathbb{R^2}$$상의 어떤 벡터라고 하자.
+>
+> $$a_1v_1 + a_2v_2 = v$$를 만족하는 스칼라 $$a_1 a_2$$를 구한다.
+>
+> $$a_1\begin{pmatrix}1 \\ 0\end{pmatrix} + a_2\begin{pmatrix}0 \\ 1\end{pmatrix} = \begin{pmatrix}a \\ b\end{pmatrix}$$를 풀면
+>
+> $$a_1 = a, a_2 = b$$이므로 두 벡터는 $$\mathbb{R^2}$$를 생성함.
+
+
+
+**자연 기저**(표준 기저): $$V = \mathbb{R^3}$$ 라 할 때 $$\mathbb{R^3}$$에 대한 기저$$\begin{pmatrix}1 \\ 0 \\ 0\end{pmatrix}$$,$$\begin{pmatrix}0 \\ 1 \\ 0\end{pmatrix}$$, $$\begin{pmatrix}0 \\ 0 \\ 1\end{pmatrix}$$을 자연기저(표준 기저) 라고 함.
+
+
+
+#### 차원
+
+$$V$$가 $$R^n$$상의 벡터 공간일 때 $$V$$의 기저가 되는 벡터의 개수를 **차원**이라고 함.
+
+$$dim{(V)} = n$$로 나타냄.
+
+
+
+> * $$V$$ 가 $$S = \{v_1, v_2, v_3\}$$에 의해 생성되는 $$R^3$$의 부분공간이라고 할 때 $$dim(V)$$를 구해보자
+>
+> $$v_1 = \begin{pmatrix}0 \\ 1 \\ 1 \end{pmatrix}$$, $$v_2 = \begin{pmatrix}1 \\ 0 \\ 1 \end{pmatrix}$$, $$v_3 = \begin{pmatrix}1 \\ 1 \\ 2 \end{pmatrix}$$이고, $$a_1v_1 + a_2v_2 + a_3v_3 = v$$여기서, $$S$$가 선형 종속이고, $$S_1$$이 $$V$$에 대한 기저가 됨
+
