--- a/cs/logic_circuit/_posts/2021-05-16-flipflop1.md
+++ b/cs/logic_circuit/_posts/2021-05-16-flipflop1.md
@@ -56,7 +56,7 @@ hide_last_modified: true
   > **상태** 
   >
   > * current : $$Q(t)$$ or $$q$$
-  > * next : $$Q(t+1)$$ or $$$q*$
+  > * next : $$Q(t+1)$$ or $$q*$$
 
   
 
