Add Logic Circuit Flip Flop 2

--- a/cs/logic_circuit/_posts/2021-05-22-flipflop2.md
+++ b/cs/logic_circuit/_posts/2021-05-22-flipflop2.md
@@ -8,7 +8,7 @@ sitemap: false
 hide_last_modified: true
 ---
 
-# 플립플롭
+# 플립플롭2
 
 
 
@@ -23,42 +23,9 @@ hide_last_modified: true
 
 
 
-## 개요
-
-
-
-### 조합 논리회로 / 순서 논리 회로
-
-* **조합 논리 회로** : 출력이 현재의 입력에 의해서만 결정되는 논리회로
-
-* **순서 논리회로** : 현재의 입력과 이전의 상태에 의해서 출력이 결정되는 논리회로
-
-  * 동기 순서회로 : 상태는 클럭펄스가 들어오는 시점에서 상태가 변화하는 회로 (플립플롭 사용)
-  * 비동기 순서회로 : 시간에 관계없이 입력이 변화하는 순서에 따라 동작하는 회로 (래치 사용)
-    <br>
-
-  > **래치** : 비동기식 기억회로, 입력이 바뀌면 즉시 출력에 반영 
-  >
-  > (잡음이 있음)
-  >
-  > 
-  >
-  > **플립플롭**: 동기식 기억회로, 입력이 바뀌어도 출력에 반응되지 않으며, 특정 조건 (트리거 조건)에서 결과로 반영 
-  >
-  > (클럭을 사용, 래치 응용 방식, 클럭이 상승 또는 하강할 때만 결정되어 나타남.)
-  >
-  > 
-  >
-  > `2개의 안정된 상태 (0 or 1) 중 하나의 값을 가지는 1bit 기억소자`
-  >
-  > **상태** 
-  >
-  > * current : $$Q(t)$$ or $$q$$
-  > * next : $$Q(t+1)$$ or $$q*$$
-
-  
-
 ## 기본적인 플립플롭
+
+
 
 ### D 플립플롭
 
@@ -151,4 +118,24 @@ hide_last_modified: true
 <img src="../img/flipflop1-16.JPG" style="zoom:50%;" />
 
 <img src="../img/flipflop1-17.JPG" style="zoom:50%;" /><img src="../img/flipflop1-18.JPG" style="zoom:50%;" />
+
+
+
+#### 에지 트리거 T 플립플롭
+
+* T 입력은 논리 1 상태로 고정하고 CP에 클록펄스를 트리거 입력으로 사용하기도 함.
+
+  이때 T 플립플롭은 클록펄스가 들어올 떄마다 상태가 바뀌는 회로이다.
+
+<img src="../img/flipflop1-19.JPG" style="zoom:50%;" />
+
+
+
+### 비동기 입력
+
+* 대부분 플립플롭은 클록펄스에 의해서 플립플롭의 상태를 변화시킬 수 있는 동기 입력이 있고, 클록 펄스와 관계없이 비동기적으로 변화시킬 수 있는 비동기 입력인
+
+  $$\bar{PR}$$과, $$\bar{CLR}$$이 있음.
+
+<img src="../img/flipflop1-20.JPG" style="zoom:50%;" />
 
