Add linear algebra post

--- a/cs/linear_algebra/_posts/2021-05-02-Vector7-1.md
+++ b/cs/linear_algebra/_posts/2021-05-02-Vector7-1.md
@@ -9,3 +9,43 @@ hide_last_modified: true
 
 
 # 고윳값과 고유 벡터
+
+
+
+### 특성 다항식과 고유값
+
+* 행렬 $$A$$가 $$n \times n$$행렬이고, $$I$$가 항등행렬일때,
+  $$Ax = \lambda x$$인 선형시스템에서 $$x \neq 0$$인 해가 존재하기 위한 필요충분조건은 행렬식 $$\vert A - \lambda \vert = 0$$이다.
+
+  
+
+* $$A = \begin{bmatrix} a_{11} & a_{12} & \cdots a_{1n}\\ a_{21} & a_{22} & \cdots a_{2n}\\ \vdots & \vdots & \vdots \\ a_{n1} & a_{n2} & \cdots a_{nn} \end{bmatrix}$$.
+
+  $$det(A - \lambda I) = \begin{bmatrix} a_{11} - \lambda & a_{12} & \cdots a_{1n}\\ a_{21} & a_{22} - \lambda & \cdots a_{2n}\\ \vdots & \vdots & \vdots \\ a_{n1} & a_{n2} & \cdots a_{nn} - \lambda \end{bmatrix}$$를 A의 특성다항식 또는 고유 다항식 이라고 하고, $$det(A - \lambda I)$$를 $$A$$의 고유방정식 이라고 함. $$\Rightarrow$$ 근은 $$n$$개
+  
+
+* $$p(\lambda) = \vert A - \lambda I \vert = 0$$을 $$A$$의 특성방정식 또는 고유 방정식 이라고 함.
+  $$\lambda$$를 고유값 이라고 하며, $$\vec{x}$$를 고유값 $$\lambda$$에 대한 고유 벡터 라고 함.
+
+
+
+### 고유값의 성질
+
+> 1. 행렬 A 의 고유값들의 합은 주대각선상의 항들의 합인 대각합(trace)와 같다.
+>    $$\lambda_1 + \lambda_2 + \cdots + \lambda _n = trace(A)$$
+>
+> 2. 행렬 A의 고유값들의 곱은 A의 행렬식의 값과 같다.
+>    $$\lambda_1 \times \lambda_2 \times \cdots \times \lambda_n = det(A)$$  
+>
+>    
+>
+> 3. 행렬 A의 전치 행렬 $$A^t$$의 고유값은 원래의 고유값과 같다.  
+>
+> 4. 행렬 A의 역행렬이 존재한다면 $$A^{-1}$$의 고유값은 다음과 같다.  
+>    $$\frac{1}{\lambda_1}, \frac{1}{\lambda_2}, \cdots , \frac{1}{\lambda_n}$$
+>
+> 5. k가 스칼라 값이라면 kA의 고유값은 원래의 고유값에다 각각 k배를 한 것과 같다.  
+>    $$k\lambda_1, k\lambda_2, \cdots , k\lambda_n$$
+>
+> 6. k가 양의 정수라면 $$A^k$$의 고유값은 원래의 고유값에다 k 제곱한 것과 같다.  
+>    $$\lambda_1^k, \lambda_2^k,\cdots , \lambda_n^k$$
